Handle style attribute changes in XUL through the normal style change mechanism rather than forcing a reframe.  Change nsIStyledContent::WalkInlineStyleRules to nsIStyledContent::GetInlineStyleRule to simplify nsCSSFrameConstructor::AttributeChanged.  b=156971  sr=hyatt  r=bzbarsky