content/base/src/nsGenericElement.h
@@ -400,7 +400,7 @@ public:
   NS_IMETHOD GetClasses(nsVoidArray& aArray) const;
   NS_IMETHOD HasClass(nsIAtom* aClass, PRBool aCaseSensitive) const;
   NS_IMETHOD WalkContentStyleRules(nsRuleWalker* aRuleWalker);
-  NS_IMETHOD WalkInlineStyleRules(nsRuleWalker* aRuleWalker);
+  NS_IMETHOD GetInlineStyleRule(nsIStyleRule** aStyleRule);
   NS_IMETHOD GetMappedAttributeImpact(const nsIAtom* aAttribute,
                                       PRInt32 aModType, PRInt32& aHint) const;
 
