content/html/content/src/nsGenericHTMLElement.h
@@ -214,7 +214,7 @@ public:
   NS_IMETHOD GetClasses(nsVoidArray& aArray) const;
   NS_IMETHOD HasClass(nsIAtom* aClass, PRBool aCaseSensitive) const;
   NS_IMETHOD WalkContentStyleRules(nsRuleWalker* aRuleWalker);
-  NS_IMETHOD WalkInlineStyleRules(nsRuleWalker* aRuleWalker);
+  NS_IMETHOD GetInlineStyleRule(nsIStyleRule** aStyleRule);
   NS_IMETHOD GetBaseURL(nsIURI*& aBaseURL) const;
   NS_IMETHOD GetBaseTarget(nsAString& aBaseTarget) const;
 
